# jf8call

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  VERSION  api-guide.md  api-tool.py  autogen.sh  build-raspberrypi.sh  build-windows-cross.sh  configure  jf8-tool.py  package-appimage.sh  resources.qrc  todo.md  voice-mode.md  websocket-api.md
cmake/: deploy_stamp.cmake  toolchain-raspberrypi-aarch64.cmake  write_build_time.cmake
src/: aprsclient.cpp  aprsclient.h  audioinput.cpp  audioinput.h  audiooutput.cpp  audiooutput.h  buildinfo.cpp  buildinfo.h  checksum.cpp  checksum.h  codec2_modem.cpp  codec2_modem.h  config.cpp  config.h  freqschedule.h  gfsk8_modem.cpp  gfsk8_modem.h  gridcache.cpp  gridcache.h  hamlibcontroller.cpp  hamlibcontroller.h  imodem.h  jf8-tool.cpp  jf8message.cpp  jf8message.h  js8message.cpp  js8message.h  main.cpp  mainwindow.cpp  mainwindow.h  messageinbox.cpp  messageinbox.h  messagemodel.cpp  messagemodel.h  olivia_modem.cpp  olivia_modem.h  periodclock.cpp  periodclock.h  psk_modem.cpp  psk_modem.h  (+16 more)
